2009-09-17  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/DebuggerSession.cs: Don't crash if a
	  breakpoint can't be removed.

	* Makefile.am:
	* Mono.Debugging.csproj:
	* Mono.Debugging.Client/DebuggerException.cs: Added exception
	  to be used to report debugger errors to the user.

2009-09-14  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs: Ignore '?'
	  prefix. We don't use it, but VS does.

2009-09-14  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/EvaluationContext.cs: Added flag
	  for enabling/disabling execution of debugging target code
	  while inspecting expressions.

	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs: Fix cast
	  expression evaluation.

2009-08-28  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs:
	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs: Allow
	  calling a method of the class of the current
	  debugging-scope. Fixes bug #525258.

2009-07-22  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.Debugging.csproj:
	* Mono.Debugging.Evaluation/Backtrace.cs: Remove unused file.

2009-07-22  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/Backtrace.cs:
	* Mono.Debugging.Evaluation/RawViewSource.cs:
	* Mono.Debugging.Evaluation/ValueReference.cs:
	* Mono.Debugging.Evaluation/ArrayElementGroup.cs:
	* Mono.Debugging.Evaluation/EvaluationContext.cs:
	* Mono.Debugging.Evaluation/TypeValueReference.cs:
	* Mono.Debugging.Evaluation/ICollectionAdaptor.cs:
	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs:
	* Mono.Debugging.Evaluation/NullValueReference.cs:
	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs:
	* Mono.Debugging.Evaluation/ExpressionEvaluator.cs:
	* Mono.Debugging.Evaluation/ArrayValueReference.cs:
	* Mono.Debugging.Evaluation/LiteralValueReference.cs:
	* Mono.Debugging.Evaluation/FilteredMembersSource.cs:
	* Mono.Debugging.Evaluation/UserVariableReference.cs: